--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,6 @@ defaultTheme = "auto"
 
 [[menu.main]]
 identifier = "github"
-name = "github.com"
+name = "github"
 url = "https://github.com/ukvass"
 weight = 30
