Revert "поменял надпись гитхаб на заглавной странице на значок"
This reverts commit ac85c96111c089af7672aa890dc1588579d1976f.

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,6 @@ defaultTheme = "auto"
 
 [[menu.main]]
 identifier = "github"
-name = "github"
+name = "github.com"
 url = "https://github.com/ukvass"
 weight = 30
