--- a/hugo.toml
+++ b/hugo.toml
@@ -5,10 +5,10 @@ theme = 'PaperMod'
 
 [Params]
 ShowReadingTime = true
+ShowShareButtons = true
 defaultTheme = "auto"
 
-[[menu.main]]
-identifier = "github"
-name = "github.com"
+[[socialIcons]]
+name = "github"
 url = "https://github.com/ukvass"
-weight = 30
+
