--- a/hugo.toml
+++ b/hugo.toml
@@ -12,3 +12,8 @@ defaultTheme = "auto"
 name = "github"
 url = "https://github.com/ukvass"
 
+[[menu.main]]
+identifier = "github"
+name = "github"
+url = "https://github.com/ukvass"
+weight = 30
