--- a/hugo.toml
+++ b/hugo.toml
@@ -3,12 +3,12 @@ languageCode = 'en-us'
 title = "Oleg's Webpage"
 theme = 'PaperMod'
 
-[Params]
+[params]
 ShowReadingTime = true
-ShowShareButtons = true
+ShowShareButtons = false
 defaultTheme = "auto"
 
-[[socialIcons]]
+[[params.socialIcons]]
 name = "github"
 url = "https://github.com/ukvass"
 
