--- a/hugo.toml
+++ b/hugo.toml
@@ -13,6 +13,6 @@ defaultTheme = "auto"
   Title = "Hello there! I'm Oleg.👋"
   Content = "Welcome to my webpage. For now, there is nothing here but my humble resume, but perhaps in the future this site will be filled with my projects."
 
-  [[params.social]]
+  [[params.socialIcons]]
   name = "github"
   url = "https://github.com/ukvass"
