added contacts etc.

--- a/hugo.toml
+++ b/hugo.toml
@@ -16,3 +16,7 @@ defaultTheme = "auto"
   [[params.socialIcons]]
   name = "github"
   url = "https://github.com/ukvass"
+
+  [[params.socialIcons]]
+  name = "email"
+  url = "./posts/contacts/"
